--- a/admob/testapp/AndroidManifest.xml
+++ b/admob/testapp/AndroidManifest.xml
@@ -8,7 +8,7 @@
   <uses-permission android:name="android.permission.WAKE_LOCK" />
   <uses-sdk android:minSdkVersion="14" android:targetSdkVersion="23" />
   <application android:label="@string/app_name">
-    <activity android:name="android.app.NativeActivity"
+    <activity android:name="com.google.firebase.example.TestappNativeActivity"
       android:screenOrientation="portrait"
       android:configChanges="orientation|screenSize">
       <meta-data android:name="android.app.lib_name"
